<?xml version="1.0"?>
<package format="3">
  <name>camera_pose_calibration</name>
  <version>0.2.0</version>
  <description>Camera pose calibration using the OpenCV asymmetric circles pattern. ROS2 version</description>

	<maintainer email="fnado079@uottawa.ca">Félix Nadon</maintainer>

	<author email="j.c.gaiser@delftrobotics.com">Hans Gaiser</author>
	<author email="j.a.vanegmond@tudelft.nl">Jeff van Egmond</author>
	<author email="maarten@de-vri.es">Maarten de Vries</author>
	<author email="m.a.morariu@delftrobotics.com">Mihai Morariu</author>
	<author email="r.m.ensing@delftrobotics.com">Ronald Ensing</author>

	<license>Apache 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>cv_bridge</depend>
	<!-- <depend>cmake_modules</depend> -->
	<!-- <depend>dr_base</depend> -->
	<!-- <depend>eigen_conversions</depend> -->
	<depend>image_transport</depend>
	<depend>geometry_msgs</depend>
	<depend>pcl_ros</depend>
	<depend>rclcpp</depend>
	<depend>sensor_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>tf2_sensor_msgs</depend>
	<depend>visualization_msgs</depend>


	<build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
